main page without the correct text, animated button and you need to fic the indicator, it s a little too big on the left

--- a/style.css
+++ b/style.css
@@ -114,5 +114,101 @@
     position: absolute;
     bottom: 45px;
     z-index: 20;
+    width: 100%;
+    overflow-x: auto;
+    scrollbar-width: none;
 }
 
+.slide-controls .slide-pagination {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 0;
+    padding: 0 20px 10px;
+    max-width: 1400px;
+}
+
+.slide-pagination{
+    color: #fff;
+    font-size: 0.85rem;
+    text-align: center;
+    cursor: pointer;
+    padding: 20px 30px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.318);
+}
+
+.slide-pagination .slide-indicator {
+    position: absolute;
+    bottom: 0;
+    border-bottom: 2px solid #fff;
+    transition: 0.4s ease-in-out;
+}
+
+
+.slide-navigation button {
+    position: absolute;
+    top: 50%;
+    z-index: 20;
+    height: 40px;
+    cursor: pointer;
+    border: none;
+    transform: translateY(-50%);
+    background: #202022;
+    color: #fff;
+    transition: 0.4s ease;
+}
+
+.slide-navigation button.swiper-button-disabled {
+    display: none;
+}
+
+.slide-navigation button#slide-prev {
+    left: 20px;
+}
+
+.slide-navigation button#slide-next {
+    right: 20px;
+}
+
+.slide-navigation button:hover {
+    background: #323235;
+
+}
+
+
+@media (max-width: 1536px){
+    .slide-wrapper .slide-item  .slide-content, 
+    .slide-controls .slide-pagination {
+        width: 85%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .slide-wrapper .slide-item  .slide-content, 
+    .slide-controls .slide-pagination {
+        width: 100%;
+    }
+
+
+    .slide-wrapper .slide-item  .slide-content > * {
+        max-width: 66%;
+    }
+
+    .slider-navigation button {
+        top: unset;
+        bottom: -15px;
+        background: none;
+    }
+
+    .slider-navigation button:hover {
+        background: none;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .slide-wrapper .slide-item  .slide-content > * {
+        max-width: 100%;
+    }
+}
